# HelloAvatar

./: .gitignore  CMakeLists.txt  install.sh  install_mac.sh  requirement.txt  run_cmake.sh  run_cmake_mac.sh
controller/: CMakeLists.txt  Character.cpp  Character.h  Controller.cpp  Controller.h  MathUtils.cpp  MathUtils.h
data/bvh/: LocomotionFlat01_000.bvh  Motion_AI_01_01-001.bvh  Motion_AI_01_01-002.bvh  Reaction.bvh  Shove_Reaction.bvh  Shove_Reaction_(1).bvh  Shove_Reaction_(2).bvh  Standing_React_Large_Gut.bvh  Standing_React_Small_From_Headshot.bvh  Taking_Punch.bvh  Zombie_Reaction_Hit.bvh  backflip_lsw.bvh  ball_handling.bvh  ball_trapping.bvh  base.bvh  boxing_lsw.bvh  breakdance_lsw.bvh  crossjab_lsw.bvh  dance_lsw.bvh  frontflip_lsw.bvh  hop_lsw.bvh  jog_lsw.bvh  jump_lsw.bvh  jumpobs_lsw.bvh  leadjab_lsw.bvh  loco.bvh  motionlist.txt  mxm_idle.bvh  mxm_lkick.bvh  mxm_lkick2.bvh  mxm_lkick3.bvh  mxm_lkick4.bvh  mxm_lkick5.bvh  mxm_lpunch.bvh  mxm_lpunch2.bvh  mxm_rkick.bvh  mxm_rkick2.bvh  mxm_rkick3.bvh  mxm_rkick4.bvh  mxm_rpunch.bvh  (+55 more)
data/bvh/mona_retarget/: Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_BtoF_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_FtoB_02.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_LtoR_02.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_RtoL_04.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_BtoF_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_FtoB_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_LtoR_04.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_RtoL_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_BtoF_05.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_FtoB_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_LtoR_04.bvh  (+1 more)
data/fbx/: X Bot.fbxZone.Identifier  XBot.fbx
imgui/: CMakeLists.txt  imgui_filebrowser.cpp  imgui_filebrowser.h
loader/: BVHLoader.cpp  BVHLoader.h  CMakeLists.txt  FBXLoader.cpp  FBXLoader.h
render/: CMakeLists.txt  DrawUtils.cpp  DrawUtils.h  GLUTWindow.cpp  GLUTWindow.h  GLUTWindow3D.cpp  UIManager.cpp  UIManager.h  Window.cpp  Window.h  main.cpp
sim/: BVH.cpp  CMakeLists.txt  Character.cpp  Character.h  Environment.cpp  Environment.h  Motion.cpp
